2.ordersystem/k8s/k8s-ordersystem/depl_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersystem-backend
  namespace: soldesk
spec:
  # Deployment나 StatefulSet이 유지할 옛날 ReplicaSet의 수를 제한한다.
  revisionHistoryLimit: 2
  replicas: 3
  selector:
    matchLabels:
      app: ordersystem-backend
  template:
    metadata:
      labels:
        app: ordersystem-backend
    spec:
      containers:
        - name: ordersystem-backend
          image: 895421295243.dkr.ecr.ap-northeast-2.amazonaws.com/order-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "500Mi"
            requests:
              cpu: "0.5"
              memory: "250Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: ordersystem-backend-service
  namespace: soldesk
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: ordersystem-backend
