2.ordersystem/k8s/k8s-ordersystem/frontend-depl_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersystem-frontend
  namespace: soldesk
spec:
  revisionHistoryLimit: 2
  replicas: 2
  selector:
    matchLabels:
      app: ordersystem-frontend
  template:
    metadata:
      labels:
        app: ordersystem-frontend
    spec:
      containers:
        - name: ordersystem-frontend
          image: 895421295243.dkr.ecr.ap-northeast-2.amazonaws.com/order-frontend:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "200m"
              memory: "128Mi"
            requests:
              cpu: "50m"
              memory: "64Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: ordersystem-frontend-service
  namespace: soldesk
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: ordersystem-frontend
