2.ordersystem/k8s/k8s-ordersystem/ingress.yml
# 같은 도메인에서 Frontend와 Backend API를 함께 서비스한다.
# /member, /product, /ordering, /health 요청은 Spring Backend로 전달하고
# 나머지 / 요청은 Frontend(Nginx)로 전달한다.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-backend-ingress
  namespace: soldesk
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: my-issuer
spec:
  tls:
  - hosts:
    - "server.aws-esk.com"
    # https설정시에 TLS 인증서가 저장된 certificate의 Secret의 이름(spec.secretName)을 지정
    secretName: server-aws-esk-com-tls
  rules:
  - host: server.aws-esk.com
    http:
      paths:
      - path: /member
        pathType: Prefix
        backend:
          service:
            name: ordersystem-backend-service
            port:
              number: 80
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: ordersystem-backend-service
            port:
              number: 80
      - path: /ordering
        pathType: Prefix
        backend:
          service:
            name: ordersystem-backend-service
            port:
              number: 80
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: ordersystem-backend-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ordersystem-frontend-service
            port:
              number: 80
